presentation/yaml/java/app_service.yml
apiVersion: v1
kind: Service
metadata:
  name: rest-serv
  labels:
    app: rest-serv
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    service-pod: service-rest-pod
